recolored and fixed alignment bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,55 +1,23 @@
 #content{
     text-align: left;
 
-    width: 90%;
+    width: 89%;
 
     position: relative;
-    left:10.1%;
+    left:11%;
 
     border: #FBF9E2;
     border-style: solid;
-    border-width: 1px;
+    border-width: 0px;
 
-    background-color: #FBF9E2;
+    background-color: #ffffff;
 }
 
 #menu{
     width: 10%;
+    height: 98%;
 
-    float: left;
+    position: absolute;
 
-    border: #E6E6FA;
-    border-style: solid;
-    border-width: 1px;
-
-    background-color: #E6E6FA;
-}
-
-#login{
-    width: 99%;
-    float: right;
-}
-
-#post{
-    margin-top: 5px;
-
-    border: #E6E6FA;
-    border-style: solid;
-    border-width: 1px;
-}
-
-#headpost{
-    background-color: #E6E6FA;
-}
-
-#date{
-    position: relative;
-    float:right;
-    text-align: right;
-}
-
-#adminlogin{
-    position: relative;
-    float:right;
-    text-align: right;
+    background-color: #7cc0d5;
 }
